--- a/src/common/style/base.css
+++ b/src/common/style/base.css
@@ -1,6 +1,7 @@
 body, html {
-  font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback';
-  user-select: none;
+	font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback';
+	font-size: 16px;
+  /* user-select: none; */
   -webkit-tap-highlight-color: transparent;
 	background: #e1e1e1;
 	min-width: 1100px;
